# vo_trick

Feature extraction and matching/: BFMatch.cpp  CMakeLists.txt  DistanceMatch.cpp  RansacMatch.cpp  knnMatch.cpp
ORB_match_demo/: CMakeLists.txt  readme.md
ORB_match_demo/include/: ORBextractor.h
ORB_match_demo/src/: CMakeLists.txt  ORBextractor.cpp
ORB_match_demo/test/: CMakeLists.txt  test.cpp
RANSAC/RANSAC_Line/: CMakeLists.txt  test_ransac_line.cpp
